--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "chart.js": "^4.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
@@ -23,7 +25,7 @@
     "serialport": "^13.0.0",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
-    "ws": "^8.18.2"
+    "ws": "^8.18.3"
   },
   "scripts": {
     "start": "react-scripts start",
