--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.525.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "react": "^19.0.0",
